<resources>
    <string name="app_name">Stock prediction</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Settings fragment strings-->
    <string name="notfication_title">Notfications</string>
    <string name="theme_title">Theme</string>
    <string name="general_title">General</string>
    <string name="about_title">About</string>
    <string name="version_title">Version</string>
    <string name="version_number">1.0.0</string>
    <string name="continue_">continue</string>
    <string name="phone_number">Phone number</string>
    <string name="notfication_favorite_predictions">Favorite prediction</string>
    <string name="notfication_all_predictions">all prediction</string>
    <string name="enter_code">Enter code</string>
    <string name="login">Login</string>

    <!--Settings preferences keys-->
    <string name="settings_notification_key">settings_notification</string>
    <string name="settings_theme_key">settings_theme</string>

    <!--Settings preferences default values-->
    <string name="settings_notification_default">True</string>
    <string name="settings_theme_default">Same as system</string>


    <!--User login\creation-->
    <string name="password_constraint">Password must contain at least 6 characters</string>
    <string name="name_constraint">No name inserted</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_password">Invalid password</string>
    <string name="already_account">There is already a user with this email address</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type stock name or symbol</string>
    <string name="about_us_paragraph">"In this project we are engaged in predicting stocks on a daily basis as a function of other stocks. Unlike a classic stock price prediction using machine algorithms and neural networks, in this project we study the stock history (stock value, whether the stock went down / up on a particular day, percentage change, etc.) compared to 3 other stocks. In other words, we examine how a change of 3 components directly affects the target stock. Our project goal is to make use of the statistical and mathematical tools we have learned about the degree to identify behavioral patterns in the capital market so as to alert the user to the expected rise / fall of a target stock.  Client side - An Android app that will display in a convenient way to the user information about stocks and the that we found forecasts (viewing / decline, prediction success rates) for stocks that have a forecast forecast. The app is built in Java language - popular with extensive information on the web, alongside an Android work studio. The app will listen to changes that takes place in the database (Firebase - Realtime DB) and  update  them live on the app (in case it is necessary).   Server side - here we will perform all the calculations that manage to name and identify patterns of behavior that reflect on the prediction results. After researching and identifying the appropriate patterns of behavior, Our server will run a script at the end of each day with the same legitimacy mechanism that found and update the database according to the findings. In order to import the relevant Data our system will connect to an API from Yahoo that will provide the stock history on a daily basis. "</string>


</resources>