<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/general_title">
        <SwitchPreference
            android:key="@string/settings_notification_key"
            android:title="@string/notfication_title"/>
        <ListPreference
            android:key="@string/settings_theme_key"
            android:title="@string/theme_title"
            android:dialogTitle="@string/theme_title"
            android:entries="@array/theme_array"
            android:defaultValue="@string/settings_theme_default"
            android:entryValues="@array/theme_array"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/about_title">
        <Preference
            android:title="About Us"
            android:key="about_us"/>
        <intent android:action="android.intent.action.VIEW"
            android:data="http://codepath.com/" />
        <Preference
            android:title="@string/version_title"
            android:summary="@string/version_number"/>
    </PreferenceCategory>
</PreferenceScreen>